# pyPhotoMaterials

./: .gitignore  .mypy.ini  .pylintrc  LICENSE  Pipfile  README.md  main.py  material.py  publish.py  pyproject.toml  requirements.txt  settings.example.ini  settings.py  utils.py
