[tool.poetry]
name = "pyphotomaterials"
version = "1.0.0"
description = "My publish workflow script."
authors = ["nnamm <t.nnamm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pylint = "^2.11.1"
pynvim = "^0.4.3"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[flake8]
max-line-length = 88
max-complexity = 20
extend-ignore = [
    "W503", "W504",
    "E203"
]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "C0330"
]

[tool.isort]
profile = "black"
# multi_line_output = 3
# include_trailing_comma = "True"
# force_grid_wrap = 0
# use_parentheses = "True"
# ensure_newline_before_comments = "False"
# line_length = 88
