[tool.poetry]
name = "pyphotomaterials"
version = "1.0.0"
description = "My publish workflow script."
authors = ["nnamm <t.nnamm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pyproject-flake8 = "5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 20
extend-ignore = [
    "W503", "W504",
]

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
#[[tool.mypy.overrides]]

[tool.pylint.messages_control]
max-line-length = 88
