[project]
name = "pyphotomaterials"
version = "1.0.0"
description = "My publish workflow script."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "pyproject-flake8>=7.0.0",
]

[tool.black]
target-version = ['py311']
line-length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 20
extend-ignore = [
    "W503", "W504",
]

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
#[[tool.mypy.overrides]]

[tool.pylint.messages_control]
max-line-length = 88
